Threading not correct in unified folder after bug 1893793
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(relnote-thunderbird 136+, thunderbird_esr128? fixed, thunderbird134 wontfix, thunderbird135 affected)
People
(Reporter: betterbird.project+18, Assigned: welpy-cw)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-beta-
corey
:
approval-comm-esr128+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36 Edg/131.0.0.0
Steps to reproduce:
Use a unified folder and switch to threaded view.
Collapse all threads.
Expand the first thread.
Switch threading off.
Switch threading on.
Expand the first thread.
Actual results:
The first thread is not threaded correctly.
Mozregression brought us here:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=ef7544db22a9042695bc0a146ee24eb8140190ce&tochange=445334850d02f3861dbb691e6ef6a0b84584071b
| Reporter | ||
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Comment 1•1 year ago
|
||
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
The patch restores the seemingly nonsensical behavior described in the last sentence of bug 1893793 comment 1.
| Reporter | ||
Comment 3•1 year ago
|
||
Thanks for addressing this quickly.
Does this work for you? It seems to correct the issue we observed, that is, all levels were the same downwards from a certain child in the tree. The faulty code assigned an incorrect identical level to all further children instead of increasing the level.
Updated•11 months ago
|
| Assignee | ||
Comment 5•11 months ago
|
||
While there are still issues with this, correcting this simple typo fixes some situations that were masked by sorting the view twice until this was changed in Bug 1893793.
| Assignee | ||
Comment 6•11 months ago
|
||
(In reply to betterbird.project+18 from comment #3)
Does this work for you? It seems to correct the issue we observed, that is, all levels were the same downwards from a certain child in the tree. The faulty code assigned an incorrect identical level to all further children instead of increasing the level.
Thanks for pointing this out. When I initially wrote the WIP patch patch (which still doesn't solve all problems) one year ago, fixing the typo separately didn't seem to make a difference because the view was still sorted twice.
| Assignee | ||
Updated•11 months ago
|
Updated•11 months ago
|
Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/0e3a91824c05
Fix typo to improve cross-folder threading. r=#thunderbird-back-end-reviewers
| Assignee | ||
Comment 8•11 months ago
|
||
Comment on attachment 9445854 [details]
Bug 1939725 - Fix typo to improve cross-folder threading. r=#thunderbird-back-end-reviewers
[Approval Request Comment]
Regression caused by (bug #): While this has been made more apparent by bug 1893793, the underlying bug has been there forever.
User impact if declined: Some messages may not be threaded correctly in cross-folder views.
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): virtually none
| Assignee | ||
Comment 9•11 months ago
|
||
Release Note Request (optional, but appreciated)
[Suggested wording]: Fixed: Some messages may have been threaded incorrectly in unified folders.
Comment 10•11 months ago
|
||
Comment on attachment 9445854 [details]
Bug 1939725 - Fix typo to improve cross-folder threading. r=#thunderbird-back-end-reviewers
[Triage Comment]
This will be included in Monday's merge of cc->beta
Updated•11 months ago
|
Comment 11•10 months ago
|
||
Comment on attachment 9445854 [details]
Bug 1939725 - Fix typo to improve cross-folder threading. r=#thunderbird-back-end-reviewers
[Triage Comment]
Approved for esr128
Comment 12•10 months ago
|
||
| bugherder uplift | ||
Thunderbird 128.7.1esr:
https://hg.mozilla.org/releases/comm-esr128/rev/f642a3e187ca
Description
•