Bug 1939725 - Fix typo to improve cross-folder threading. r=#thunderbird-back-end-reviewers

While there are still issues with this, correcting this simple typo fixes some situations that were masked by sorting the view twice until this was changed in Bug 1893793.

Differential Revision: https://phabricator.services.mozilla.com/D233248